@@ -9611,9 +9611,12 @@ C-u g', show the raw article."
 	(when (gnus-summary-goto-subject (cdr gnus-article-current) nil t)
 	  (gnus-summary-update-secondary-mark (cdr gnus-article-current))))))
    ((not arg)
-    (require 'shr)
-    (let ((shr-ignore-cache t))
-      ;; Select the article the normal way.
+    ;; Select the article the normal way.
+    (if (eq mm-text-html-renderer 'shr)
+	(progn
+	  (require 'shr)
+	  (let ((shr-ignore-cache t))
+	    (gnus-summary-select-article nil 'force)))
       (gnus-summary-select-article nil 'force)))
    ((equal arg '(16))
     ;; C-u C-u g
